# FileCopier-Rust

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  README.md
crates/app-cli/: Cargo.toml
crates/app-cli/src/: main.rs
crates/app-gui/: Cargo.toml  tauri.conf.json
crates/app-gui/src-tauri/: tauri.conf.json
crates/lib-core/: Cargo.toml
crates/lib-core/benches/: README.md  engine_bench.rs
crates/lib-core/src/: bandwidth.rs  buffer_pool.rs  checkpoint.rs  config.rs  error.rs  lib.rs  os_ops.rs  telemetry.rs
crates/lib-core/src/engine/: block.rs  dry_run.rs  mod.rs  move_op.rs  orchestrator.rs  swarm.rs
crates/lib-core/src/hash/: blake3_impl.rs  mod.rs  sha2_impl.rs  xxhash_impl.rs
crates/lib-core/src/pipeline/: mod.rs  reader.rs  writer.rs
crates/lib-core/tests/: checkpoint.rs  config.rs  dry_run_move.rs  hash.rs  pipeline_integration.rs
crates/lib-os/: Cargo.toml
crates/lib-os/src/: detect.rs  lib.rs  traits.rs
crates/lib-os/src/unix/: mod.rs
crates/lib-os/src/windows/: clipboard.rs  clipboard_daemon.rs  explorer_path.rs  fs.rs  mod.rs  vss.rs
