[package]
name        = "lib-os"
version     = "0.1.0"
edition     = "2021"
description = "Abstracciones de sistema operativo para FileCopier-Rust"

[dependencies]
lib-core  = { path = "../lib-core" }
tracing   = { workspace = true }
thiserror = { workspace = true }
anyhow    = { workspace = true }
log       = { workspace = true }
tokio     = { version = "1", features = ["rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_Foundation",
] }
windows-sys = { version = "0.59", features = [
    "Win32_Storage_FileSystem",   # GetDriveTypeW, SetFileInformationByHandle, SetFileAttributesW, CreateFileW, GetDiskFreeSpaceExW
    "Win32_Foundation",           # HANDLE, BOOL, INVALID_HANDLE_VALUE, CloseHandle
    "Win32_System_IO",            # DeviceIoControl
    "Win32_Security",             # SECURITY_ATTRIBUTES
    "Win32_System_DataExchange",  # OpenClipboard, GetClipboardData, CloseClipboard, IsClipboardFormatAvailable, RegisterClipboardFormatW, EmptyClipboard, GetClipboardSequenceNumber
    "Win32_System_Memory",        # GlobalLock, GlobalUnlock, GlobalSize
    "Win32_System_Ole",           # CF_HDROP, DROPEFFECT_*
    "Win32_System_Console",       # SetConsoleCtrlHandler (para app-cli)
    "Win32_UI_Shell",             # DragQueryFileW, HDROP
    "Win32_UI_WindowsAndMessaging", # OpenClipboard hwnd parameter type
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lib]
name = "lib_os"
path = "src/lib.rs"
