[package]
name        = "lib-os"
version     = "0.1.0"
edition     = "2021"
description = "Abstracciones de sistema operativo para FileCopier-Rust"

[dependencies]
lib-core  = { path = "../lib-core" }
tracing   = { workspace = true }
thiserror = { workspace = true }
anyhow    = { workspace = true }
log       = { workspace = true }
tokio     = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Crate `windows` para interfaces COM tipadas (IShellBrowser, UIAutomation, etc.)
windows = { version = "0.58", features = [
    # COM base
    "Win32_System_Com",
    "Win32_Foundation",
    # Shell / Explorer
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    # UI Automation (AddressBar de Explorer)
    "Win32_UI_Accessibility",
    # ShellWindows (colección de ventanas Explorer)
    "Win32_System_Ole",
] }

# Crate `windows-sys` para APIs procedurales (más ligero para WndProc, mensajes, etc.)
windows-sys = { version = "0.59", features = [
    # Filesystem y Storage
    "Win32_Storage_FileSystem",     # GetDriveTypeW, SetFileInformationByHandle, etc.
    # Foundation
    "Win32_Foundation",             # HWND, HANDLE, BOOL, etc.
    # I/O
    "Win32_System_IO",              # DeviceIoControl
    # Seguridad
    "Win32_Security",               # SECURITY_ATTRIBUTES
    # Portapapeles
    "Win32_System_DataExchange",    # OpenClipboard, GetClipboardData, AddClipboardFormatListener, etc.
    "Win32_System_Memory",          # GlobalLock, GlobalUnlock
    "Win32_System_Ole",             # CF_HDROP, DROPEFFECT_*
    # COM
    "Win32_System_Com",             # CoInitializeEx, COINIT_APARTMENTTHREADED
    # Shell / Drag & Drop
    "Win32_UI_Shell",              # DragQueryFileW, SHGetPathFromIDListW
    "Win32_UI_Shell_Common",
    # Ventanas y mensajes
    "Win32_UI_WindowsAndMessaging", # CreateWindowExW, RegisterClassExW, GetMessageW, etc.
    # Graphics Gdi (required for WNDCLASSEXW)
    "Win32_Graphics_Gdi",
    # Consola
    "Win32_System_Console",         # SetConsoleCtrlHandler
    # LibraryLoader
    "Win32_System_LibraryLoader",   # GetModuleHandleW
    # Disco
    "Win32_Storage_FileSystem",     # GetDiskFreeSpaceExW
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lib]
name = "lib_os"
path = "src/lib.rs"